--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 <div>
 <nav>
-<button>день</button>
-<button>авто</button>
-<button>неон</button>
+<button class="button">день</button>
+<button class="button">авто</button>
+<button class="button">неон</button>
 </nav>
 </div>
 </body>
