--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <nav>
 <button class="button">день</button>
 <button class="button">авто</button>
-<button class="button">неон</button>
+<button class="isActiveButton">неон</button>
 </nav>
+<h1>No Focus</h1>
 </div>
 </body>
 </html>
