--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <button class="button">авто</button>
 <button class="isActiveButton">неон</button>
 </nav>
+<div class="title">
 <h1>No Focus</h1>
 </div>
+<div class="rec">
+<input>REC</input>
+</div>
+<input>No Focus</input>
+<div class="ellipse"></div>
 </body>
 </html>
