--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
 </head>
 <body>
 <div>
-<nav>
+<nav class="navigation">
 <button class="button">день</button>
 <button class="button">авто</button>
 <button class="isActiveButton">неон</button>
 </nav>
 <div class="title">
-<h1>No Focus</h1>
+<h1>no nocus</h1>
 </div>
 <div class="rec">
-<input>REC</input>
+<p>REC</p>
 </div>
-<input>No Focus</input>
 <div class="ellipse"></div>
+<div class="content">
+<p>Что делать, когда не можешь делать ничего
+ Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+</div>
 </body>
 </html>
