--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
 <div>
+<header>
 <nav class="navigation">
 <button class="button">день</button>
 <button class="button">авто</button>
 <button class="isActiveButton">неон</button>
 </nav>
 <div class="title">
-<h1>no nocus</h1>
+<h1>no focus</h1>
 </div>
 <div class="rec">
 <p>REC</p>
@@ -23,6 +24,40 @@
 <div class="content">
 <p>Что делать, когда не можешь делать ничего
  Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+</div>
+</header>
+<div class="contenta">
+<p>Почему сосредоточиться так сложно</p>
+</div>
+<div class="h2">
+<h2>Многозадачность</h2>
+</div>
+<div class="text">
+<p>Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+</div>
+<div class="dofamin">
+<h2>Дофамин</h2>
+</div>
+<div class="texta">
+    <p>С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+</div>
+<div>
+<div class="title3">
+    <p>Что снижает концентрацию внимания?</p>
+</div>
+<div class="mnogozadachnost">
+<h3>Многозадачность</h3>
+</div>
+<div class="content3">
+    <p>Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+</div>
+<col>
+<div class="eat">
+<h3>Еда</h3>
+</div>
+<div class="content4">
+    <p>«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
+</div>
 </div>
 </body>
 </html>
