--- a/index.html
+++ b/index.html
@@ -1,63 +1,122 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+<div class="allmain">
 <body>
-<div>
-<header>
-<nav class="navigation">
-<button class="button">день</button>
-<button class="button">авто</button>
-<button class="isActiveButton">неон</button>
-</nav>
-<div class="title">
-<h1>no focus</h1>
+    <div>
+        <header>
+        <div class="allmain"></div>
+            <nav class="navigation">
+                <button class="button">день</button>
+                <button class="button">авто</button>
+                <button class="isActiveButton">неон</button>
+            </nav>
+            <div class="title">
+                <h1>no focus</h1>
+            </div>
+            <div class="rec">
+                <p>REC</p>
+            </div>
+            <div class="ellipse"></div>
+            <div class="content">
+                <p>Что делать, когда не можешь делать ничего
+                    Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+            </div>
+        </header>
+        <main>
+            <main>
+                <div class="container">
+                    <div class="contenta">
+                        <p>Почему сосредоточиться так сложно</p>
+                    </div>
+                    <div class="h2">
+                        <h2>Многозадачность</h2>
+                    </div>
+                    <div class="text">
+                        <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная
+                            многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+                            просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах
+                            одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет
+                            кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
+                            устаём.</p>
+                    </div>
+                    <div class="dofamin">
+                        <h2>Дофамин</h2>
+                    </div>
+                    <div class="texta">
+                        <p>С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться
+                            замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения
+                            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов.
+                            Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие.
+                            Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+                    </div>
+                </div>
+            </div>
+                <div class="title3">
+                    <p>Что снижает концентрацию внимания?</p>
+                </div>
+                <div class="container2">
+                    <div class="mnogozadachnost">
+                        <h3>Многозадачность</h3>
+                    
+                        <p>Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко
+                            меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет
+                            опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно.
+                            Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+                    </div>
+
+                    <div class="eat">
+                        <h3>Еда</h3>
+                    
+                        <p>«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и
+                            помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в
+                            результате попадаем на «углеводные качели»: как только действие «быстрых углеводов»
+                            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
 </div>
-<div class="rec">
-<p>REC</p>
+
+                    <div class="gadzheti">
+<h3>Гаджеты</h3>
+
+                        <p>Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на
+                            компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с
+                            одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации,
+                            человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в
+                            гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+                    </div>
+                </div>
+                <div class="group">
+                    <p>Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</p>
+                        <h3>5 простых (на самом деле не очень) советов</h3>
+<div class="contentb">
+    <h3>Представьте небо и облака</h3>
+    <p>Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+    <div class="content5">
+        <h3>Включите музыку</h3>
+        <p>Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
+    </div>
+        <div class="content6">
+            <h3>Прогуляйтесь</h3>
+            <p>Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+                показал</p>
+        </div>
+                <div class="content7">
+                    <h3>Хорошо ешьте</h3>
+                    <p>Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+                </div>
+                    <div class="content8">
+                        <h3>Читайте</h3>
+                        <p>Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+            </div>
 </div>
-<div class="ellipse"></div>
-<div class="content">
-<p>Что делать, когда не можешь делать ничего
- Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
-</div>
-</header>
-<div class="contenta">
-<p>Почему сосредоточиться так сложно</p>
-</div>
-<div class="h2">
-<h2>Многозадачность</h2>
-</div>
-<div class="text">
-<p>Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
-</div>
-<div class="dofamin">
-<h2>Дофамин</h2>
-</div>
-<div class="texta">
-    <p>С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
-</div>
-<div>
-<div class="title3">
-    <p>Что снижает концентрацию внимания?</p>
-</div>
-<div class="mnogozadachnost">
-<h3>Многозадачность</h3>
-</div>
-<div class="content3">
-    <p>Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
-</div>
-<col>
-<div class="eat">
-<h3>Еда</h3>
-</div>
-<div class="content4">
-    <p>«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
-</div>
-</div>
+
+
+        </main>
 </body>
+
 </html>
