--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <div class="allmain">
+    <div class="chackchack">
 <body>
     <div>
         <header>
@@ -17,10 +18,9 @@
                 <button class="button">авто</button>
                 <button class="isActiveButton">неон</button>
             </nav>
+            <div class="globalinfo">
             <div class="title">
                 <h1>no focus</h1>
-            </div>
-            <div class="rec">
                 <p>REC</p>
             </div>
             <div class="ellipse"></div>
@@ -28,20 +28,21 @@
                 <p>Что делать, когда не можешь делать ничего
                     Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
             </div>
+        </div>
         </header>
         <main>
             <main>
                 <div class="container">
                     <div class="contenta">
                         <p>Почему сосредоточиться так сложно</p>
-                    </div>
-                    <div class="h2">
+                        </div>
+                        <div class="h2">
                         <h2>Многозадачность</h2>
                     </div>
                     <div class="text">
                         <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная
                             многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-                            просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах
+                            просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a> , что мозгу тяжело концентрироваться даже на двух делах
                             одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет
                             кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
                             устаём.</p>
@@ -90,19 +91,24 @@
                             гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
                     </div>
                 </div>
+                <div class="allinfo">
                 <div class="group">
                     <p>Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</p>
-                        <h3>5 простых (на самом деле не очень) советов</h3>
 <div class="contentb">
+    <h3>5 простых (на самом деле не очень) советов</h3>
+</div>
+    <div class="goochi">
     <h3>Представьте небо и облака</h3>
     <p>Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+    </div>
+    <div class="conteiner4">
     <div class="content5">
         <h3>Включите музыку</h3>
         <p>Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
     </div>
         <div class="content6">
             <h3>Прогуляйтесь</h3>
-            <p>Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+            <p>Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a> , что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
                 показал</p>
         </div>
                 <div class="content7">
@@ -113,10 +119,22 @@
                         <h3>Читайте</h3>
                         <p>Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
             </div>
+            </div>
 </div>
-
-
+</div>
+                </div>
+</div>
+<div class="galleri">
+<p>А можно в картинках?</p>
+<img src="image-1.png" class="foto1" alt="">
+<img src="image-2.png" class="foto2" alt="">
+<img src="image-3.png" class="foto3" alt="">
+<img src="image-4.png" class="foto4" alt="">
+<img src="image-5.png" class="foto5" alt="">
+</div>
         </main>
-</body>
-
+        <footer>
+            <span>focus</span>
+        </footer>
+    </div>
 </html>
