--- a/index.html
+++ b/index.html
@@ -1,42 +1,63 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="kukushka">
-            <img src="image.png" alt="">
-    <div class="header">
-        <div class="kukushka">
-<a href="#">item 1</a>
-<a href="#">item 2</a>
-<div class="gg">
-<a href="#">item 3</a>
-    <p class="knopochka">logaut</p>
-</div>
-</div>
-<div class="main">
-            <a href="#">Username</a>
-            <img src="image copy.png" alt="">
+    <h1>Boards</h1>
+    <div class="filtri">
+        <h3>Folloving galleries to power up your art creere</h3>
+    <div class="filtri2">
+        <div class="filtri3">
+            <span>painting</span>
+            <button>
+                <img src="+.png" alt="">
+            </button>
+    </div>
+    <div class="filtri4">
+<span>Illustration</span>
+<button>
+    <img src="+.png" alt="">
+</button>
+    </div>
+    </div>
+
+    <div class="kartinki">
+        <div class="galleri">
+            <div class="photo">
+<img src="photo1.png" alt="">
+<img src="photo2.png" alt="">
+<img src="photo3.png" alt="">
+            </div>
+            <div class="panel">
+                <span>
+                    paintings
+                </span>
+                <button>
+                    +
+                </button>
+            </div>
         </div>
     </div>
-    <div class="container">
-        <h1>Регистрация</h1>
-        <hr>
-        <label for=""></label>
-        <input type="text" placeholder="Погоняло"required>
-        <label for="psw"></label>
-        <input type="password" placeholder="Фамилия"required>
-        <label for="psw-repeat"></label>
-        <input type="password" placeholder="Номер мобилы"required>
-        <hr>
-        <button type="submit" class="registerbtn">Жмай сюда</button>
-      </div>
-    </form>
+    <div class="kartinki">
+        <div class="galleri">
+            <div class="photo">
+<img src="image copy 2.png" alt="">
+<img src="Ximage.png" alt="">
+<img src="image copy.png" alt="">
+            </div>
+            <div class="panel">
+                <span>
+                    paintings
+                </span>
+                <button>
+                    +
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
